--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 /__pycache__/*
 /plotting/__pycache__/*
 /base/__pycache__/*
+/base/plotting/__pycache__/*
+/src/__pycache__/*
 
 *.egg-info/
 .installed.cfg
